welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: Missing closing brace `}' assumed here
varx:int = 0
^Variables:1: error: ';' expected but '=' found.
varx:int = 0
         ^